--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
 <html>
   <body>
     Hi! My name is Sam. I play chess, dance, upgrade bikes and workout.
+    <h2>&#128512;</h2>
+    <h1 style="background-color:LightGray;">LightGray</h1>
   </body>
 </html>
