--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    Hi! My name is Sam. I play chess, dance, upgrade bikes and workout.
-    <h2>&#128512;</h2>
-    <h1 style="background-color:LightGray;">LightGray</h1>
+<h1 style="background-color:DodgerBlue;">    Hi! My name is Sam. I play chess, dance, upgrade bikes and workout.
+</h1>
   </body>
 </html>
