--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <body>
-<h1 style="background-color:DodgerBlue;">    Hi! My name is Sam. I play chess, dance, upgrade bikes and workout.
+  <head><h1 style="background-color:DodgerBlue;"></head>
+
+  Hi! My name is Sam. I play chess, dance, upgrade bikes and workout.
 </h1>
   </body>
 </html>
